--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "register-service-worker": "^1.7.2",
+    "social-links": "^1.7.3",
     "vue": "^3.2.13"
   },
   "devDependencies": {
