--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "register-service-worker": "^1.7.2",
     "social-links": "^1.8.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-select": "^4.0.0-beta.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "~5.0.0",
