--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "social-links-app",
-  "description": "Demo app that uses utilizes social-links npm module",
+  "description": "Demo app that utilizes social-links npm module",
   "version": "0.5.0",
   "scripts": {
     "serve": "vue-cli-service serve",
