--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "npm": "^8.19.2",
     "register-service-worker": "^1.7.2",
-    "social-links": "^1.9.0",
+    "social-links": "^1.10.0",
     "vue": "^3.2.13",
     "vue-select": "^4.0.0-beta.5"
   },
